# qteeg

./: LICENSE.txt  README.md  main.py  pyproject.toml  settings.ini
assets/: EEG_recording_2020-11-13-18.00.04.csv  EEG_recording_2020-11-13-22.48.05.csv
scripts/: flake.sh  setup.cfg
src/: MainWindow.py  MplCanvas.py  MplWindow.py  TimeAxisItem.py  UIMainWindow.py  ViewBoxCustom.py  about.py  frequency.py  frequency_filter.py  help.py  helpers.py  settings.py  spike.py  stream_worker.py  transformer.py
tests/: test_MainWindow.py  test_frequency_factory.py  test_frequency_filter.py  test_helpers.py  test_transformer.py
ui/: about.ui  help.ui  mainwindow.ui  resources.py  resources.qrc  settings.ui  spike_detection.ui
