[tool.poetry]
name = "QtEEG"
version = "0.0.1"
description = "Visualise and manipulate EEG MuseS output"
authors = ["enzo-bc <b.chybowski@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
pandas = "^1.2.3"
scipy = "^1.6.3"
pyqt5 = "^5.15.4"
pyqtchart = "^5.15.4"
pyqtgraph = "^0.12.0"
muselsl = "^2.1.0"
mypy = "^0.812"
pytest = "^6.2.3"
flake8 = "^3.9.0"
pytest-qt = "^3.3.0"
pytest-cov = "^2.11.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
